--- a/room.html
+++ b/room.html
@@ -165,7 +165,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/room-3.png" alt="Connecting Hotel Rooms">
+                                <img class="img-fluid" src="img/room-4.jpg" alt="Connecting Hotel Rooms">
                                 <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Great for Families</small>
                             </div>
                             <div class="p-4 mt-2">
